--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "node server.js"
   },
   "engines": {
-    "node": ">0.4.0"
+    "node": ">=0.4.0"
   },
   "dependencies": {
     "express": ">=2.4.3",
