--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "author": "Josiah Ruddell <jruddell@gmail.com> (www.josiahruddell.com)",
   "name": "webnote5",
-  "keywords": ["webnote5", "note-app", "note"],
+  "keywords": ["webnote5", "note-app", "note", "NomNotes"],
   "description": "Note app",
-  "version": "0.1.0",
-  "homepage": "http://webnote5.com",
+  "version": "0.1.1",
+  "homepage": "http://nomnotes.com",
   "repository": {
     "type": "git",
     "url": "git://github.com/josiahruddell/webnote5.git"
